--- a/Menus.html
+++ b/Menus.html
@@ -19,7 +19,7 @@
     <header>
         <center><h1 id="inicio" class="titulo">El portal restaurante</h1></center>
         <br>
-        <center><a class="enlace1" href="./Index.html">Presentacion</a>  
+        <center><a class="enlace1" href="./index.html">Presentacion</a>  
             &nbsp;&nbsp;&nbsp;&nbsp;  <a class="enlace2" href="./Menus.html">Menus</a>
          &nbsp;&nbsp;&nbsp;&nbsp;   <a class="enlace3" href="./Reserva.html">Reserva</a></center>
         <hr class="linea1">
