--- a/Menus.html
+++ b/Menus.html
@@ -9,47 +9,85 @@
    
     <title>Menu</title>
 </head>
-<style type="text/css"> 
-    table,caption, tr, td {
-        border: 1px solid;
-        border-collapse: collapse;
-    }
-</style>
+
 <body>
     <header>
         <center><h1 id="inicio" class="titulo">El portal restaurante</h1></center>
         <br>
-        <center><a class="enlace1" href="./index.html">Presentacion</a>  
+        <center><a class="enlace1" href="./Index.html">Presentacion</a>  
             &nbsp;&nbsp;&nbsp;&nbsp;  <a class="enlace2" href="./Menus.html">Menus</a>
          &nbsp;&nbsp;&nbsp;&nbsp;   <a class="enlace3" href="./Reserva.html">Reserva</a></center>
         <hr class="linea1">
     </header>
-   <center> <table class="tabla1">
+ <div class="letrastabla"><center> <table class="tabla1">
         <caption class="cabeceraTabla">Menú</caption>
         <tr class="Celda1">
             <td>Primeros</td>
             <td><ul>
-                <li class="Celda2">Sopas</li>
-                <li class="Celda3">Ensaladas</li>
-                <li class="Celda4">Pasta</li>
-            </ul></td>
+                <li class="imagensopa" > <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Sapiente molestias, quasi architecto cupiditate dicta quo nam, eos tempori
+                    bus natus a maiores nisi quis! Aliquid, autem neque? Sapiente debitis dolore quaerat?</div>
+                 <img src="./sopa.jpg" class="desvanecesopa" width="300" height="300">
+                </li>
+                 <li class="imagenensalada" > <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Sapiente molestias, quasi architecto cupiditate dicta quo nam, eos tempori
+                    bus natus a maiores nisi quis! Aliquid, autem neque? Sapiente debitis dolore quaerat?
+                </div>
+                 <img src="./ensalada.jpg" class="desvaneceensalada" width="300" height="300">
+                </li>
+                 <li class="imagenpasta" > <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Sapiente molestias, quasi architecto cupiditate dicta quo nam, eos tempori
+                    bus natus a maiores nisi quis! Aliquid, autem neque? Sapiente debitis dolore quaerat?
+                </div>
+                 <img src="./pasta.jpg" class="desvanecepasta" width="300" height="300"></li>
         </tr>
         <tr>
             <td >Segundos</td>
             <td><ul>
-                <li>Carnes</li>
-                <li>Pescados</li>
+                <li class="imagenfiletes" > <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Sapiente molestias, quasi architecto cupiditate dicta quo nam, eos tempori
+                    bus natus a maiores nisi quis! Aliquid, autem neque? Sapiente debitis dolore quaerat?
+                </div>
+                 <img src="./filetes.jpg" class="desvanecefiletes" width="300" height="300">
+                </li>
+                 <li class="imagenpescado" > <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Sapiente molestias, quasi architecto cupiditate dicta quo nam, eos tempori
+                    bus natus a maiores nisi quis! Aliquid, autem neque? Sapiente debitis dolore quaerat?
+                </div>
+                 <img src="./pescado.jpg" class="desvanecepescado" width="300" height="300">
+                </li>
+                <li class="imagenberenjena" > <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Sapiente molestias, quasi architecto cupiditate dicta quo nam, eos tempori
+                    bus natus a maiores nisi quis! Aliquid, autem neque? Sapiente debitis dolore quaerat?
+                </div>
+                 <img src="./berenjena.jpg" class="desvaneceberenjena" width="300" height="300">
+                </li>
             </ul></td>
         </tr>
         <tr>
             <td>Postres</td>
             <td><ul>
-                <li>Fruta</li>
-                <li>Helado</li>
-                <li>Tarta</li>
+                <li class="imagenhelado" > <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Sapiente molestias, quasi architecto cupiditate dicta quo nam, eos tempori
+                    bus natus a maiores nisi quis! Aliquid, autem neque? Sapiente debitis dolore quaerat?
+                </div>
+                 <img src="./helado.jpg" class="desvanecehelado" width="300" height="300">
+                </li>
+                <li class="imagenfruta" > <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Sapiente molestias, quasi architecto cupiditate dicta quo nam, eos tempori
+                    bus natus a maiores nisi quis! Aliquid, autem neque? Sapiente debitis dolore quaerat?
+                </div>
+                 <img src="./fruta.jpg" class="desvanecefruta" width="300" height="300">
+                </li>
+                <li class="imagentarta" > <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Sapiente molestias, quasi architecto cupiditate dicta quo nam, eos tempori
+                    bus natus a maiores nisi quis! Aliquid, autem neque? Sapiente debitis dolore quaerat?
+                </div>
+                 <img src="./tarta.jpg" class="desvanecetarta" width="300" height="300">
+                </li>
             </ul></td>
         </tr>
-    </table> </center>
+    </table> </center></div>
     
 </body>
 </html>
