--- a/Menus.html
+++ b/Menus.html
@@ -12,38 +12,55 @@
 
 <body>
     <header>
-        <center><h1 id="inicio" class="titulo">El portal restaurante</h1></center>
+        <center><h1 id="inicio" class="titulo"><span> El portal restaurante </span></h1></center>
         <br>
-        <center><a class="enlace1" href="./Index.html">Presentacion</a>  
+        <center class="barra"><a class="enlace1" href="./Index.html">Presentacion</a>  
             &nbsp;&nbsp;&nbsp;&nbsp;  <a class="enlace2" href="./Menus.html">Menus</a>
          &nbsp;&nbsp;&nbsp;&nbsp;   <a class="enlace3" href="./Reserva.html">Reserva</a></center>
         <hr class="linea1">
     </header>
- <div class="letrastabla"><center> <table class="tabla1">
-        <caption class="cabeceraTabla">Menú</caption>
+ <div class="letrastabla"><center> <table class="tabla1" cellspacing="1" cellpading="1">
+        <caption class="cabeceratabla"> <span>Menú</span></caption>
         <tr class="Celda1">
-            <td>Primeros</td>
-            <td><ul>
-                <li class="imagensopa" > <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+            <td class="primeros" align="center"> <span>
+        P
+        r
+        i
+        m
+        e
+        r
+        o
+        s</span></td>
+            <td class="back"><ul>
+                <li class="imagensopa" > <div class="texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                     Sapiente molestias, quasi architecto cupiditate dicta quo nam, eos tempori
                     bus natus a maiores nisi quis! Aliquid, autem neque? Sapiente debitis dolore quaerat?</div>
                  <img src="./sopa.jpg" class="desvanecesopa" width="300" height="300">
                 </li>
-                 <li class="imagenensalada" > <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                 <li class="imagenensalada" > <div class="texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                     Sapiente molestias, quasi architecto cupiditate dicta quo nam, eos tempori
                     bus natus a maiores nisi quis! Aliquid, autem neque? Sapiente debitis dolore quaerat?
                 </div>
                  <img src="./ensalada.jpg" class="desvaneceensalada" width="300" height="300">
                 </li>
-                 <li class="imagenpasta" > <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                 <li class="imagenpasta" > <div class="texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                     Sapiente molestias, quasi architecto cupiditate dicta quo nam, eos tempori
                     bus natus a maiores nisi quis! Aliquid, autem neque? Sapiente debitis dolore quaerat?
                 </div>
-                 <img src="./pasta.jpg" class="desvanecepasta" width="300" height="300"></li>
+                 <img src="./pasta.jpg" class="desvanecepasta" width="300" height="300"></li>  </ul> </td>
         </tr>
         <tr>
-            <td >Segundos</td>
-            <td><ul>
+            <td class="segundos"><span>
+        S       
+        e       
+        g       
+        u       
+        n       
+        d
+        o       
+        s       
+    </span></td>
+            <td class="back"><ul>
                 <li class="imagenfiletes" > <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                     Sapiente molestias, quasi architecto cupiditate dicta quo nam, eos tempori
                     bus natus a maiores nisi quis! Aliquid, autem neque? Sapiente debitis dolore quaerat?
@@ -65,8 +82,15 @@
             </ul></td>
         </tr>
         <tr>
-            <td>Postres</td>
-            <td><ul>
+            <td class="postres"><span>
+        P
+        o
+        s
+        t
+        r
+        e
+        s</span></td>
+            <td class="back"><ul>
                 <li class="imagenhelado" > <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                     Sapiente molestias, quasi architecto cupiditate dicta quo nam, eos tempori
                     bus natus a maiores nisi quis! Aliquid, autem neque? Sapiente debitis dolore quaerat?
@@ -88,6 +112,9 @@
             </ul></td>
         </tr>
     </table> </center></div>
+    <br>
+    <center> <a class="enlace4" href=#inicio>Volver arriba</a> </center>
+     <hr class="linea2">
     
 </body>
 </html>
