--- a/Index.html
+++ b/Index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
     <header>
-    <center><h1 id="inicio" class="titulo">El portal restaurante</h1></center>
+    <center><h1 id="inicio" class="titulo"> <span> El portal restaurante </span> </h1></center>
     <br>
-    <center><a class="enlace1" href="./Index.html">Presentacion</a>  
+    <center class="barra"><a class="enlace1" href="./Index.html">Presentacion</a>  
         &nbsp;&nbsp;&nbsp;&nbsp;  <a class="enlace2" href="./Menus.html">Menus</a>
      &nbsp;&nbsp;&nbsp;&nbsp;   <a class="enlace3" href="./Reserva.html">Reserva</a></center>
     <hr class="linea1">
